# stravagancia

./: .dockerignore  .env.example  .env.example~  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  fly.toml  main.py  manage.py  pyproject.toml  refresh_and_get_activity.py  test_strava.py  test_strava_connection.py  update_dashboard.sh
.github/workflows/: keep-alive.yml  wake-render-morning.yml
grafana/: Dockerfile  generate_dashboards.py  init_dashboard.sh
grafana/dashboards/: strava.json  strava_bucket.json  strava_monthly.json  strava_weekly.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: postgres.yml
keepalive/: README.md  cloudflare-worker.js
metabase-data/metabase.db/: metabase.db.mv.db  metabase.db.trace.db
metabase-data/metabase.db/bck/: metabase.db.mv.db  metabase.db.trace.db
strava_app/: asgi.py  settings.py  urls.py  wsgi.py
strava_integration/: admin.py  apps.py  models.py  renaming.py  services.py  tests.py  tests_renaming.py  ui_urls.py  urls.py  utils.py  views.py  views_ui.py
strava_integration/management/commands/: detect_missing_activities.py  load_all_activities.py  (+3 more)
strava_integration/migrations/: 0001_initial.py  0002_activity.py  0003_activity_calories.py  0004_missingactivity_alter_activity_options.py  0005_activity_start_date_local_and_more.py  0006_alter_activity_options_activity_average_heartrate_and_more.py  0007_remove_activity_timezone.py
strava_integration/templates/: base.html
strava_integration/templatetags/: strava_filters.py
(+14 files in other folders)
