[project]
name = "stravagancia"
version = "0.1.0"
description = "Django app to extract and display Strava activities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5.2.7",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "whitenoise>=6.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "strava_app.settings"
python_files = ["tests.py", "test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
]
